Add neovim config

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dotfiles"]
 	path = dotfiles
 	url = https://github.com/alexisquintero/dotfiles
+[submodule ".vim"]
+	path = .vim
+	url = https://github.com/alexisquintero/.vim
