--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "dotfiles"]
 	path = dotfiles
-	url = git@github.com:alexisquintero/dotfiles.git
+	; url = git@github.com:alexisquintero/dotfiles.git
+	url = https://github.com/alexisquintero/dotfiles.git
 [submodule ".vim"]
 	path = .vim
-	url = git@github.com:alexisquintero/.vim.git
+	; url = git@github.com:alexisquintero/.vim.git
+	url = https://github.com/alexisquintero/.vim.git
