--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -2,7 +2,7 @@ name: update-flake-lock
 on:
   workflow_dispatch: # allows manual triggering
   schedule:
-    - cron: '0 0 1 * *' # At 00:00 on day-of-month 1.
+    - cron: '0 9 7,21 * *'
 
 jobs:
   lockfile:
